--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "ao": "^0.1.1",
     "aos": "^2.3.4",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
